<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.OnBoardingActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_16"
                android:layout_marginStart="-300dp"
                android:layout_marginTop="-50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/ellipse_16"
                />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="-60dp"
                android:layout_marginEnd="-50dp"
                android:contentDescription="@string/ellipse_17"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <io.alterac.blurkit.BlurLayout
            android:id="@+id/blurLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="84dp"
            app:blk_cornerRadius="20dp"
            app:blk_blurRadius="20"
            app:blk_downscaleFactor="0.5"
            app:blk_fps="0" />


        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/border_white"/>



    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-48dp"
        android:orientation="horizontal"
        >

        <View
            android:layout_width="50dp"
            android:layout_height="8dp"
            android:background="@drawable/gradient_golden_yellow"/>

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/gradient_golden_yellow_round"/>

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/gradient_golden_yellow_round"/>


    </LinearLayout>




    <TextView
        android:id="@+id/tv_connect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:fontFamily="@font/segoeui"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/golden"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_separator" />


    <TextView
        android:id="@+id/tv_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/connect_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_connect_text"
        android:layout_marginStart="20dp"
        android:textSize="16sp"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_app_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_19"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/ellipse_19"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse_18"
                android:layout_marginEnd="-32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/ellipse_20"/>


        </androidx.constraintlayout.widget.ConstraintLayout>




        <io.alterac.blurkit.BlurLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center"
            app:blk_cornerRadius="20dp"
            app:blk_blurRadius="20"
            app:blk_downscaleFactor="0.5"
            app:blk_fps="0">


        </io.alterac.blurkit.BlurLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center"
            android:background="@drawable/border_white"/>






    </FrameLayout>







</androidx.constraintlayout.widget.ConstraintLayout>